# ENA_Database_Build

./: README.md  package-list.txt  pyproject.toml
batch_scripts/: dask_batch.sh  env_setup.sh  sample_mysql.config
comparison_codes/: compare_pickles.py  comparison_SQLs.py  comparison_batch.sh  database_ena.py  pickle_ena.py
dask_workflow/: dask_batch.sh  dask_tasks.py
ena_build/: __init__.py  bio_parse_embl.py  dask_tasks.py  dask_tskmgr.py  mysql_database.py  new_parse_embl.py  parse_embl.py
lib/: mysql_database.py~  parse_embl.py  parse_embl.py~
pipelines/first_pass/: build_ena_db.py  dask_tskmgr.py
temp/: __init__.py  mysql_database.py
tests/: README.md  location_parsing_test.py  location_parsing_tests.py  regex_test.py  regex_tests.py
